--- a/hbase-coprocessor/pom.xml
+++ b/hbase-coprocessor/pom.xml
@@ -31,7 +31,7 @@
             <groupId>org.apache.omid</groupId>
             <artifactId>omid-hbase-client</artifactId>
             <version>${project.version}</version>
-            <scope>test</scope>
+        <!--    <scope>test</scope> -->
         </dependency>
         <dependency>
             <groupId>org.apache.omid</groupId>
